@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add button to allow folder tree to be rebuilt in smartmobile view.
 * [mms] Add option to poll mailbox for new mailbox when creating a mailbox (Request #13227).
  </notes>
  <contents>
@@ -3700,8 +3701,8 @@
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
 * [mms] Fix regression where containers could not be moved via drag/drop in dynamic view.
-* [mms] Don't perform purge sentmail login task unless at least one sentmail mailbox exists.
-* [mms] Don't perform purge Spam login task unless Spam mailbox exists.
+* [mms] Don&apos;t perform purge sentmail login task unless at least one sentmail mailbox exists.
+* [mms] Don&apos;t perform purge Spam login task unless Spam mailbox exists.
 * [mms] Fix dragging a mailbox to the base level in dynamic view.
 * [mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome and IE.
 * [mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug #13281).
